--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 envlist=
-    py{35,36}-dj{111,2}
+    py{35,36}-dj{18,111,2}
 [testenv]
 deps=
     dj111: django==1.11
     dj2: django>=2.0
+    dj18: django==1.8
     jsonschema
 setenv=
     DJANGO_SETTINGS_MODULE=django_jsonforms.tests.settings
