--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist=
-    py{35,36}-dj{18,111,2}
+    py{3,35,36}-dj{111,2}
 [testenv]
 deps=
     dj111: django==1.11
@@ -9,4 +9,5 @@ deps=
     jsonschema
 setenv=
     DJANGO_SETTINGS_MODULE=django_jsonforms.tests.settings
-commands=python -m django test
+    PYTHONPATH={toxinidir}
+commands=django-admin test
