--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,8 @@ deps=
     dj2: django>=2.0
     dj18: django==1.8
     jsonschema
+    selenium
 setenv=
-    DJANGO_SETTINGS_MODULE=django_jsonforms.tests.settings
+    DJANGO_SETTINGS_MODULE=django_jsonforms.tests.testapp.settings
     PYTHONPATH={toxinidir}
 commands=django-admin test
