--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,5 @@ deps=
 setenv=
     DJANGO_SETTINGS_MODULE=django_jsonforms.tests.testapp.settings
     PYTHONPATH={toxinidir}
+    DISPLAY=:99.0
 commands=django-admin test
