--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
 - '3.5'
 - '3.6'
 - 3.7-dev
+before_install:
+- wget https://github.com/mozilla/geckodriver/releases/download/v0.11.1/geckodriver-v0.11.1-linux64.tar.gz
+- mkdir geckodriver
+- tar -xzf geckodriver-v0.11.1-linux64.tar.gz -C geckodriver
+- export PATH=$PATH:$PWD/geckodriver
 install:
 - pip install tox-travis
 script:
