--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 - '3.5'
 - '3.6'
 - 3.7-dev
+addons:
+  firefox: latest
 before_install:
 - wget https://github.com/mozilla/geckodriver/releases/download/v0.11.1/geckodriver-v0.11.1-linux64.tar.gz
 - mkdir geckodriver
