Changed where display variable set

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,8 @@ deps=
     dj18: django==1.8
     jsonschema
     selenium
+passenv=DISPLAY
 setenv=
     DJANGO_SETTINGS_MODULE=django_jsonforms.tests.testapp.settings
     PYTHONPATH={toxinidir}
-    DISPLAY=:99.0
 commands=django-admin test
