--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,14 @@ before_install:
 - mkdir geckodriver
 - tar -xzf geckodriver-v0.19.1-linux64.tar.gz -C geckodriver
 - export PATH=$PATH:$PWD/geckodriver
-- export DISPLAY=:99.0
 install:
 - pip install tox-travis
+before_script:
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- sleep 3
 script:
-- xvfb-run tox
+- tox
 deploy:
   provider: pypi
   user: hwhite4
