added posargs to tox

--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,4 @@ passenv=DISPLAY
 setenv=
     DJANGO_SETTINGS_MODULE=django_jsonforms.tests.testapp.settings
     PYTHONPATH={toxinidir}
-commands=django-admin test
+commands=django-admin test {posargs}
