--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,23 @@
 sudo: false
+dist: bionic
 language: python
 python:
-- '3.5'
-- '3.6'
-- '3.7'
-- '3.8'
+  - '3.6'
+  - '3.7'
+  - '3.8'
 addons:
   firefox: latest
+services:
+  - xvfb
 before_install:
-- wget https://github.com/mozilla/geckodriver/releases/download/v0.19.1/geckodriver-v0.19.1-linux64.tar.gz
-- mkdir geckodriver
-- tar -xzf geckodriver-v0.19.1-linux64.tar.gz -C geckodriver
-- export PATH=$PATH:$PWD/geckodriver
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.26.0/geckodriver-v0.26.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.26.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
 install:
-- pip install tox-travis
-before_script:
-- "export DISPLAY=:99.0"
-- "sh -e /etc/init.d/xvfb start"
-- sleep 3
+  - pip install tox-travis
 script:
-- tox
+  - tox
 deploy:
   provider: pypi
   user: hwhite4
@@ -28,4 +26,4 @@ deploy:
   distributions: sdist bdist_wheel
   on:
     tags: true
-    python: '3.6'
+    python: '3.8'
