--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
 envlist=
-    py{35,36}-dj{111,2}
-    py37-dj2
+    py{36,37,38}-dj{2,3}
 [testenv]
 deps=
-    dj111: django==1.11
-    dj2: django>=2.0
-    dj18: django==1.8
+    dj2: django~=2.2
+    dj3: django~=3.0
     jsonschema
     selenium
 passenv=DISPLAY
